--- a/playground-erlang/Makefile
+++ b/playground-erlang/Makefile
@@ -1,7 +1,10 @@
+clean:
+	rm -r ./ebin
+
 setup:
 	mkdir -p ./ebin && mkdir -p ./plt
 
-compile: setup
+compile: clean setup
 	erl -make
 
 dialyzer: compile
@@ -9,3 +12,12 @@ dialyzer: compile
 
 build-plt: setup
 	dialyzer --build_plt --apps erts kernel stdlib mnesia crypto compiler --output_plt ./plt/default.plt
+
+symlink-dialyzer-src: setup
+	rm ./src/dialyzer && ln -s "../../../otp/lib/dialyzer/src" ./src/dialyzer
+
+compile-dialyzer:
+	cd ../../otp && $(MAKE) install
+
+recompile: compile compile-dialyzer
+
