--- a/playground-erlang/Makefile
+++ b/playground-erlang/Makefile
@@ -2,23 +2,24 @@ clean:
 	rm -rf ./ebin
 
 setup:
-	mkdir -p ./ebin && mkdir -p ./plt
+	mkdir -p ./ebin/discrepancies
+	mkdir -p ./plt
 
 compile:
-	$(MAKE) clean
-	$(MAKE) setup
-	erlc +debug_info -o ./ebin ./src/*.erl
+	erlc +debug_info -o ./ebin/discrepancies ./src/discrepancies/*.erl
 
-dialyzer:
-	dialyzer --plt ./plt/default.plt -r ./ebin
+compile-runner:
+	erlc +debug_info -o ./ebin ./src/runner.erl
+
+dialyze:
+	dialyzer --plt ./plt/default.plt -r ./ebin/discrepancies
 
 build-plt:
-	$(MAKE) setup
 	(dialyzer --check_plt --plt ./plt/default.plt) || (dialyzer --build_plt --apps erts kernel stdlib mnesia crypto compiler --output_plt ./plt/default.plt)
 
 symlink-dialyzer-src:
-	$(MAKE) setup
-	rm -rf ./src/dialyzer && ln -s "../../../otp/lib/dialyzer/src" ./src/dialyzer
+	rm -rf ./src/dialyzer
+	ln -s "../../../otp/lib/dialyzer/src" ./src/dialyzer
 
 compile-dialyzer:
 	cd ../../otp && $(MAKE) install.dirs && $(MAKE) install.libs ONLY_DIALYZER=true  && $(MAKE) install.Install && $(MAKE) install.bin
@@ -27,6 +28,6 @@ compile-dialyzer:
 run-erlang-port-mapper-deamon:
 	erl -sname foo -s init stop -noshell
 
-recompile: compile-dialyzer compile
+recompile: clean setup compile-dialyzer compile compile-runner
 
-initial-configure: build-plt symlink-dialyzer-src recompile
+initial-configure: clean setup build-plt symlink-dialyzer-src compile-dialyzer compile compile-runner
